# arxiv-paper-curator

./: .env  .gitignore  README.md  compose.yml  pyproject.toml
airflow/: requirements-airflow.txt
airflow/dags/: arxiv_paper_ingestion.py
airflow/dags/arxiv_ingestion/: fetching.py
src/: config.py
src/arxiv_paper_ingestion/: common.py  fetch.py  indexing.py  report.py  setup.py
src/services/: metadata_fetcher.py
src/services/arxiv/: client.py
